# CompactAnalysis

./: Makefile  cuts.cfg  extractEvent.sh  listFile.cfg  listFile.cfg.comb  listFileSingle.cfg  listFileSingle.cfg.comb
ROOTComp/: CMakeLists.txt  CompactImport.cpp  CompactImport.h  SelectionFunctions.cpp  SelectionFunctions.cpp.orig  SelectionFunctions.h  gitcommit.sh  makefile  pi0d_Selection.C  pi0d_Selection.cpp  pid.cpp  pid_mu.cpp
ROOTComp/CompactRead/: CMakeLists.txt  CompactIO.cpp  CompactIO.h  CompactImport.cpp  CompactImport.h  ROOTOutput.cpp  ROOTOutput.h
ROOTComp/Support/: CMakeLists.txt  Event.cpp  Event.h  LinkDef.h  OptionsParser.cpp  OptionsParser.h  ScanCuts.cpp  ScanCuts.h  pid_res.cpp  pid_res.h
lists/: data.stage1_34.list  data.stage1_34.systematics.net.list  data.stage1_34.systematics.vtx_charge.list  data.stage1_34.systematics.vtx_z.list  mc.2007.k2pigd.kloe.pi0d.radcor.MS.list  mc.2007.k2pigd.kloe.pi0d.radcor.prague.3and4body.list  mc.2007.km3d.noradcor.list  mc.2007.period5.k2pigd.kloe.pi0d.radcor.MS.list  mu.stage1_34.list  mu.stage1_34.systematics.net.list  mu.stage1_34.systematics.vtx_charge.list  mu.stage1_34.systematics.vtx_z.list  pi.stage1_34.list  pi.stage1_34.systematics.net.list  pi.stage1_34.systematics.vtx_charge.list  pi.stage1_34.systematics.vtx_z.list  scmp.full.pass2.list  scmp.p1.pass2.list  scmp.p14  scmp.p2.pass2.list  scmp.p3.pass2.list  scmp.p4.pass2.list  scmp.p4a.pass2.list  scmp.p5.pass2.list  scmp.p6.pass2.list  scmp.p7.pass2.list  scmp.p8.pass2.list  scmp.p8a.pass2.list
src/: compact_main.c  user.c
userinc/: LinkDef_exportClasses.h  LinkDef_mystructs.h  compactLib.h  exportClasses.h  funLib.h  mystructs.h  user.h
usersrc/: closap_double.F  compactLib.c  exportClasses.c  funLib.c  mystructs.c  nico_ke2Selection.c  nico_pi0dalitzAna.c  nico_pi0dalitzSelection.c  nico_pi0dalitzSelection_old.c  user_exit.c  user_init.c  user_mcEvent.c  user_superBurst.c  user_superCmpEvent.c  user_superCmpFilter.c  user_superEob.c  user_superMcEvent.c
utility/: CMakeLists.txt  README  combine.C  combine_batch.C  combine_new.C  fit_batch.C  fit_test.C  gitcommit.sh  make_bins.C  makefile  pi0DalitzHeader.h  plot.C  prepareWeights.C  style.C  test.C  toyMC.C
utility/batch/: combine_batch.cpp  fit_batch.cpp  make_bins.cpp  prepareWeights.cpp  runcell.sh  runcellinclude.sh  toyMC.cpp
utility/common/: CMakeLists.txt  Combiner.cpp  Combiner.h  ConfigFile.cpp  ConfigFile.h  DataGetter.cpp  DataGetter.h  FitDataSample.cpp  FitDataSample.h  FitMCSample.cpp  FitMCSample.h  Fitter.cpp  Fitter.h  Functions.h  RunWeights.cpp  RunWeights.h  Sample.cpp  Sample.h  pi0DalitzHeader.h  pk_corr.cpp
utility/common/Drawer/: CombineDrawer.cpp  CombineDrawer.h  Drawer.cpp  Drawer.h  FitResultDrawer.cpp  FitResultDrawer.h  HistoDrawer.cpp  HistoDrawer.h  InputFitDrawer.cpp  InputFitDrawer.h  ScanDrawer.cpp  ScanDrawer.h  StackDrawer.cpp  StackDrawer.h  StackRatioDrawer.cpp  StackRatioDrawer.h
utility/common/Fitter/: Fitter.cpp  Fitter.h  MinuitFitter.cpp  MinuitFitter.h  MinuitFitterNewChi2.cpp  MinuitFitterNewChi2.h  MinuitFitterNewROOT.cpp  MinuitFitterNewROOT.h
utility/common/Interface/: DataSample.cpp  DataSample.h  HistoDrawer.cpp  MCSample.cpp  MCSample.h  Sample.cpp  Sample.h  SubSample.cpp  SubSample.h
utility/common/Samples/: CombineDataSample.cpp  CombineDataSample.h  CombineMCSample.cpp  CombineMCSample.h  CombineSample.cpp  CombineSample.h  FitDataSample.cpp  FitDataSample.h  FitMCSample.cpp  FitMCSample.h  Sample.cpp  Sample.h
utility/python/: acceptance.py  alpha_beta.py  doScan.py  extract.py  fails.py  listEvents.py  makeThesis.py  plotLib.py  plot_diff.py  plots  print_cuts.py  pyconfig.py  scanLib.py  sortData.py  startJobs.py  success.py  sum.py
utility/root/: distrib.C  plot.C  plot2.C  plot_diff.C  simpleCombine.C  tracksAnalysis.C
